conditions.Conditions.scala.error
Erreur de compilation :
Conditions:2: error: '=' expected but '(' found.
   si (estFaceMur=true) {recule(1:Int);}
      ^Conditions:5: error: illegal start of simple expression
	}
        ^